--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "^5.0.1",
     "sass": "^1.64.2",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
@@ -22,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "react-scripts start"
   },
   "browserslist": {
     "production": [
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   }
 }
